--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.0.1'
     //compile 'com.android.volley:volley:1.0.0'
     compile 'com.mcxiaoke.volley:library:1.0.19'
-    compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    //compile 'com.github.PhilJay:MPAndroidChart:v3.0.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.1.6'
 
     testCompile 'junit:junit:4.12'
 
