--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
 
     <application
@@ -46,6 +47,11 @@
             android:name="net.eclissi.lucasop.ioboss.UpdateActivity"
             android:label="@string/app_name"
             android:parentActivityName="net.eclissi.lucasop.ioboss.PlacePickerActivity"/>
+        <activity
+            android:name="net.eclissi.lucasop.ioboss.PieChartActivity"
+            android:label="@string/app_name"
+            android:parentActivityName="net.eclissi.lucasop.ioboss.MainActivity"/>
+
 
         <service android:name="net.eclissi.lucasop.ioboss.services.ARService" />
         <service android:name="net.eclissi.lucasop.ioboss.services.ActivityRecognizedService" />
